<resources>
    <string name="app_name">Quiz</string>
    <string name="text_batch">Batches</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_empty">We can\'t seems to find any Upcoming quiz here</string>
    <string name="bad">Bad</string>
    <string name="title_activity_quiz_session">QuizSessionActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="text_start_quiz">START TEST</string>
    <string name="text_terms">I accept all terms and instructions</string>
    <string name="text_finish">FINISH</string>
    <string name="text_choose_option">Choose an option:</string>
    <string name="text_next">Next</string>
    <string name="text_prev">Previous</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="text_correct">Correctly Answered Questions</string>
    <string name="text_wrong">Wrong Answered Questins</string>
    <string name="text_time_elapsed">Response Time</string>
    <string name="text_questions_attempted">Questions Attempted</string>
    <string name="text_total_score">Total Score</string>
    <string name="text_internet_disc">Internet Disconnected</string>
</resources>