<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:orientation="vertical"
    tools:context=".ui.activity.result.ResultActivity"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Analysis"
        app:titleTextColor="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/margin_card_result"
        app:cardUseCompatPadding="true"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/text_correct"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/text_size_card_title" />

            <TextView
                android:id="@+id/tv_correct_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:textSize="@dimen/text_size_socre"
                android:textStyle="bold"
                tools:text="8" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/margin_card_result"
        app:cardUseCompatPadding="true"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/text_wrong"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/text_size_card_title" />

            <TextView
                android:id="@+id/tv_wrong_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:textSize="@dimen/text_size_socre"
                android:textStyle="bold"
                tools:text="8" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/margin_card_result"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/text_time_elapsed"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/text_size_card_title" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:textSize="@dimen/text_size_socre"
                android:textStyle="bold"
                tools:text="8" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/margin_card_result"
        app:cardUseCompatPadding="true"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/text_questions_attempted"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/text_size_card_title" />

            <TextView
                android:id="@+id/tv_attempted"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:textSize="@dimen/text_size_socre"
                android:textStyle="bold"
                tools:text="8" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/margin_card_result"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/text_total_score"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/text_size_card_title" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:gravity="center"
                android:textSize="@dimen/text_size_socre"
                android:textStyle="bold"
                tools:text="8" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>