<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@color/colorLight"
    tools:context=".ui.activity.quizsession.QuizSessionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/layout_normal">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_quiz_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/text_size_quiz_title" />

        <TextView
            android:id="@+id/textView_quiz_duration"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/check_box_terms"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center|start"
                android:text="@string/text_terms" />
        </LinearLayout>
            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/progressBar"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:layout_gravity="center"
                />
        <androidx.cardview.widget.CardView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/button_start_quiz"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cornerRadius="8dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:visibility="visible"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_start_quiz"
                    android:textColor="@color/colorLight" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/text_next"
                    android:src="@drawable/ic_round_arrow_right_alt_24"
                    app:tint="@color/colorLight" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/text_next"
        android:src="@drawable/ic_round_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
    android:visibility="invisible"
    android:id="@+id/quiz_page"
    layout="@layout/page_quiz"/>
</androidx.constraintlayout.widget.ConstraintLayout>